<resources>
    <string name="app_name">Walter White</string>


    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="points_header">Points</string>
    <string name="program_header">Programme</string>

    <!-- Messages Preferences -->
    <string name="sp_title">Nombre de points</string>
    <string name="rh_title">Nombre de points dans la réserve hebdomadaire</string>
    <string name="pounds_title">Poids de départ</string>
    <string name="ref_day_title">Jour de pesée</string>
    <string name="program_title">Programme</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Navigation menu -->
    <string name="menu_header">Menu</string>
    <string name="menu_recipes">Recettes</string>
    <string name="menu_weights">Poids</string>
    <string name="menu_settings">Parametres</string>
    <string name="menu_meals">Repas</string>






    <!--MealsActivity strings-->
    <string name="title_activity_meals">MealsActivity</string>
    <string name="mainAddIngredientButtonLabel">Ajouter un aliment</string>


    <!--NewConsoActivity strings-->
    <string name="title_activity_new_conso">NewConsoActivity</string>
    <string name="tab_scan">Scan</string>
    <string name="tab_express">Express</string>
    <string name="tab_namesearch">Rechercher</string>
    <string name="tab_create">Créer</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="action_weight">Poids</string>
    <string name="table_weight_pounds">Poids</string>
    <string name="table_weight_date">Date</string>
    <string name="mainAddPounds">Enregistrer poids</string>
    <string name="action_main">Saisie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="express_name_label">Nom</string>
    <string name="express_points_label">Nombre de points</string>
    <string name="addExpressButtonLabel">Ajouter</string>
    <string name="calorie_amount_label">Calories</string>
    <string name="sugar_amount_label">Sucres</string>
    <string name="fat_amount_label">Graisses</string>
    <string name="prot_amount_label">Protéines</string>
    <string name="addKnownButtonLabel">Ajouter à la liste des aliments connus</string>
    <string name="new_ingredient_name_label">Nom</string>
    <string name="mass_amount_label">Quantité (g)</string>
    <string name="barcode_label">Code Barre</string>
    <string name="express_express_label">Repas</string>
    <string name="express_meals_label">Repas</string>
    <string name="radio_serving">Par portion</string>
    <string name="radio_gr">Par gramme</string>
    <string name="amount_label">Entrez une quantité</string>
    <string name="launchScan">Lancer le scan</string>
    <string name="search_product">Recherche Produits</string>
    <string name="search_ingredient">Mes ingrédients</string>
    <string name="search_recipe">Mes recettes</string>
    <string name="update">Mettre à jour</string>
    <string name="delete">Supprimer</string>

</resources>