<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/points_header">

        <EditTextPreference
            app:key="sp_nb"
            app:defaultValue="23"
            app:title="@string/sp_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="rh_nb"
            app:defaultValue="35"
            app:title="@string/rh_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/program_header">

        <EditTextPreference
            app:key="pounds"
            app:title="@string/pounds_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/days_entries"
            app:entryValues="@array/days_values"
            app:key="day_ref"
            app:title="@string/ref_day_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="Bleu"
            app:entries="@array/program_colors"
            app:entryValues="@array/program_colors"
            app:key="programColor_ref"
            app:title="@string/program_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>