<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="activity_main_nav_view">

    <item android:id="@+id/action_main"
        android:title="@string/menu_meals"
        android:icon="@drawable/ic_meals"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_recipes"
        android:title="@string/menu_recipes"
        android:icon="@drawable/ic_recipes"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_weight"
        android:title="@string/menu_weights"
        android:icon="@drawable/ic_weights"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
</menu>