<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateIngredientFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calorie_amount_label" />
        <EditText
            android:id="@+id/calorie_amount"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sugar_amount_label" />
        <EditText
            android:id="@+id/sugar_amount"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fat_amount_label" />
        <EditText
            android:id="@+id/fat_amount"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/prot_amount_label" />
        <EditText
            android:id="@+id/prot_amount"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/pointcircle" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/MainAddIngredientButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listMeals">

        <Button
            android:id="@+id/addKnownButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/addKnownButtonLabel" />

    </RelativeLayout>


</FrameLayout>