<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WeightFragment">

    <RelativeLayout android:id="@+id/WeightDateLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#333333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/WeightDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pounds_title" />
        <EditText
            android:id="@+id/pounds_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <Button
            android:id="@+id/weight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="50dp"
            android:text="@string/mainAddPounds"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>




    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:text="@string/table_weight_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip" />

            <TextView
                android:text="@string/table_weight_pounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="3dip" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listweights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="#009688"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" >

        </androidx.recyclerview.widget.RecyclerView>
   </TableLayout>

</RelativeLayout>